FB Login, Navigation Activity with skeleton screens.

--- a/app/src/main/res/layout/ac_fb_login.xml
+++ b/app/src/main/res/layout/ac_fb_login.xml
@@ -8,7 +8,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/loginFrame">
-
     </FrameLayout>
+
+    <ImageView
+        android:id="@+id/ivTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_delete"/>
+
+    <ProgressBar
+        android:id="@+id/pbDpLoading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"/>
+
+
 
 </LinearLayout>
