--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,14 +13,29 @@
     tools:context="com.example.sandeep.changepins.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvUserDetails"/>
 
-    <FrameLayout
-        android:id="@+id/flStory"
+    <android.support.v4.view.ViewPager
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/pagerStories"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    </FrameLayout>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabStories"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
+
+        <android.support.design.widget.TabItem
+            android:text="My List"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"/>
+
+        <android.support.design.widget.TabItem
+            android:text="Recommended"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"/>
+
+    </android.support.design.widget.TabLayout>
+
+    </android.support.v4.view.ViewPager>
+
 </RelativeLayout>
