--- a/app/src/main/res/layout/card_story.xml
+++ b/app/src/main/res/layout/card_story.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardCornerRadius="4dp"
-    android:layout_margin="8dp">
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,7 +36,6 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
@@ -47,6 +47,7 @@
             android:src="@drawable/test_image"/>
         <TextView
             android:id="@+id/tvCardTitle"
+            android:padding="8dp"
             android:textColor="@android:color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
