Made custom activity and implemented. But Appbarlayout is not working fine

--- a/app/src/main/res/layout/ac_contactus.xml
+++ b/app/src/main/res/layout/ac_contactus.xml
@@ -1,46 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
+    <include layout="@layout/layout_toolbar"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:layout_width="match_parent"/>
 
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" >
-
-            <ImageView
-                android:id="@+id/ivBack"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back"/>
-        </android.support.v7.widget.Toolbar>
-
-    </android.support.design.widget.AppBarLayout>
-
-
-    <EditText
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bContactUs"
-        android:inputType="textPersonName"
-        android:hint="Type your issue here"
-        android:gravity="bottom"
-        android:id="@+id/editText" />
-    <Button
-        android:layout_marginBottom="100dp"
-        android:layout_alignParentBottom="true"
-        android:id="@+id/bContactUs"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Submit"
-        android:layout_centerHorizontal="true"/>
-</RelativeLayout>
+        android:text="Contact Us"/>
+</LinearLayout>
