--- a/app/src/main/res/layout/ac_places.xml
+++ b/app/src/main/res/layout/ac_places.xml
@@ -3,6 +3,8 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include layout="@layout/layout_toolbar"/>
+
     <android.support.v4.view.ViewPager
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/pagerPlaces"
