--- a/app/src/main/res/layout/ac_test.xml
+++ b/app/src/main/res/layout/ac_test.xml
@@ -5,17 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <include android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary">
-
-        <ImageView
-            android:id="@+id/ivBack"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/back"/>
-    </android.support.v7.widget.Toolbar>
+        layout="@layout/layout_toolbar"/>
 
 </LinearLayout>
