--- a/app/src/main/res/layout/card_story.xml
+++ b/app/src/main/res/layout/card_story.xml
@@ -12,48 +12,50 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/ivCardImage"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@drawable/test_image"/>
+            <TextView
+                android:id="@+id/tvCardTitle"
+                android:padding="8dp"
+                android:textColor="@android:color/black"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cleanup inside IIT Madras campus"
+                android:textSize="22sp"/>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:padding="8dp">
-        <TextView
-            android:id="@+id/tvCardPlace"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="PLACE/USER"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:layout_centerVertical="true"/>
-        <ImageView
-            android:id="@+id/ivCardOptions"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/dots"/>
+        </LinearLayout>
 
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <ImageView
-            android:id="@+id/ivCardImage"
-            android:layout_alignParentRight="true"
-            android:layout_width="wrap_content"
-            android:layout_height="200dp"
-            android:layout_below="@+id/tvCardTitle"
-            android:src="@drawable/test_image"/>
-        <TextView
-            android:id="@+id/tvCardTitle"
-            android:padding="8dp"
-            android:textColor="@android:color/black"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="TITLE"
-            android:textSize="30sp"/>
-    </RelativeLayout>
+            android:layout_gravity="center"
+            android:padding="8dp">
+            <TextView
+                android:id="@+id/tvPublisherName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sai Tejo Kiran"
+                android:textColor="@android:color/black"
+                android:textSize="12sp"
+                android:padding="8dp"
+                android:layout_centerVertical="true"
+                android:alpha="0.6"/>
+            <ImageView
+                android:id="@+id/ivCardOptions"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/dots"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
