Added random image method, opening Mainactivity without opening fb login activity

--- a/app/src/main/res/layout/card_story.xml
+++ b/app/src/main/res/layout/card_story.xml
@@ -20,7 +20,7 @@
                 android:id="@+id/ivCardImage"
                 android:layout_width="match_parent"
                 android:layout_height="200dp"
-                android:src="@drawable/test_image"/>
+                android:src="@drawable/eunoia2"/>
             <TextView
                 android:id="@+id/tvCardTitle"
                 android:padding="8dp"
